--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "chartjs-plugin-annotation": "^0.5.7",
     "immer": "^3.1.3",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-chartjs-2": "^2.7.6",
