--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-to-pdf": "0.0.8",
     "recharts": "^1.6.2"
   },
   "scripts": {
